Fix Nav Buttons Layout on Small Screens
This commits sets all the nav buttons on small screens to full width to
avoid a layout "bug" where the Your Conversations button was visible
peeking out from under the Choose A Shake dropdown.

fixes #99

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -145,6 +145,10 @@ a:active {
   justify-content: flex-end;
 }
 
+.site-nav--item > * {
+    flex: 1;
+}
+
 .site-nav--item + .site-nav--item {
   margin-top: .25em;
 }
@@ -159,6 +163,10 @@ a:active {
     display: flex;
     flex-direction: row;
     position: static;
+  }
+
+  .site-nav--item > * {
+      flex: none;
   }
 
   .site-nav--item + .site-nav--item {
@@ -222,6 +230,7 @@ a:active {
   font-weight: bold;
   padding: 13px 19px;
   white-space: nowrap;
+  width: 100%;
 }
 
 .choose-a-shake.is-expanded .choose-a-shake--toggle {
